Perkin-UAT/force-app/main/default/objects/Case/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Replaced Part</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Update Hardware</fullName>
            </value>
            <value>
                <fullName>Lab Problem</fullName>
            </value>
            <value>
                <fullName>No Problem Found</fullName>
            </value>
            <value>
                <fullName>Referred to Appllication</fullName>
            </value>
            <value>
                <fullName>Defect Free Install</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Re-Open</fullName>
            </value>
            <value>
                <fullName>Email Received</fullName>
            </value>
            <value>
                <fullName>Email Sent</fullName>
            </value>
            <value>
                <fullName>Email Read</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>