Perkin-UAT/force-app/main/default/objects/Case/fields/Annual_Orders__c.field-meta.xml
<CustomField>
    <fullName>Annual_Orders__c</fullName>
    <label>Annual Orders</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>