Perkin-UAT/force-app/main/default/objects/Case/fields/Applications__c.field-meta.xml
<CustomField>
    <fullName>Applications__c</fullName>
    <description>Training Section</description>
    <label>Applications</label>
    <type>TextArea</type>
</CustomField>