Perkin-UAT/force-app/main/default/objects/Case/fields/Approver_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Approver_Level_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer Complaint Approver Level 1</description>
    <inlineHelpText>Customer Complaint Additional Approver</inlineHelpText>
    <label>Additional Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>