Perkin-UAT/force-app/main/default/objects/Case/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PKI Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>SVC Calls</relationshipLabel>
    <relationshipName>Case</relationshipName>
    <type>Lookup</type>
</CustomField>