Perkin-UAT/force-app/main/default/objects/Case/fields/Asset_Date__c.field-meta.xml
<CustomField>
    <fullName>Asset_Date__c</fullName>
    <formula>Asset.InstallDate</formula>
    <label>Asset Install Date</label>
    <type>Date</type>
</CustomField>