Perkin-UAT/force-app/main/default/objects/Case/fields/B2B_Country__c.field-meta.xml
<CustomField>
    <fullName>B2B_Country__c</fullName>
    <label>B2B Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AU</fullName>
                <label>Australia</label>
            </value>
            <value>
                <fullName>AT</fullName>
                <label>Austria</label>
            </value>
            <value>
                <fullName>BE</fullName>
                <label>Belgium</label>
            </value>
            <value>
                <fullName>BR</fullName>
                <label>Brazil</label>
            </value>
            <value>
                <fullName>CA</fullName>
                <label>Canada</label>
            </value>
            <value>
                <fullName>CL</fullName>
                <label>Chile</label>
            </value>
            <value>
                <fullName>CN</fullName>
                <label>China</label>
            </value>
            <value>
                <fullName>DK</fullName>
                <label>Denmark</label>
            </value>
            <value>
                <fullName>FR</fullName>
                <label>France</label>
            </value>
            <value>
                <fullName>DE</fullName>
                <label>Germany</label>
            </value>
            <value>
                <fullName>IN</fullName>
                <label>India</label>
            </value>
            <value>
                <fullName>IE</fullName>
                <label>Ireland</label>
            </value>
            <value>
                <fullName>IT</fullName>
                <label>Italy</label>
            </value>
            <value>
                <fullName>JA</fullName>
                <label>Japan</label>
            </value>
            <value>
                <fullName>MY</fullName>
                <label>Malaysia</label>
            </value>
            <value>
                <fullName>MX</fullName>
                <label>Mexico</label>
            </value>
            <value>
                <fullName>NL</fullName>
                <label>Netherlands</label>
            </value>
            <value>
                <fullName>NO</fullName>
                <label>Norway</label>
            </value>
            <value>
                <fullName>PL</fullName>
                <label>Poland</label>
            </value>
            <value>
                <fullName>KO</fullName>
                <label>Republic of South Korea</label>
            </value>
            <value>
                <fullName>SG</fullName>
                <label>Singapore</label>
            </value>
            <value>
                <fullName>ES</fullName>
                <label>Spain</label>
            </value>
            <value>
                <fullName>SE</fullName>
                <label>Sweden</label>
            </value>
            <value>
                <fullName>SH</fullName>
                <label>Switzerland</label>
            </value>
            <value>
                <fullName>TW</fullName>
                <label>Taiwan</label>
            </value>
            <value>
                <fullName>TR</fullName>
                <label>Turkey</label>
            </value>
            <value>
                <fullName>GB</fullName>
                <label>United Kingdom</label>
            </value>
            <value>
                <fullName>US</fullName>
                <label>United States</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>