Perkin-UAT/force-app/main/default/objects/Case/fields/BD_Closed_Date_Reporting__c.field-meta.xml
<CustomField>
    <fullName>BD_Closed_Date_Reporting__c</fullName>
    <description>Displays the Legacy Closed Date if populated, otherwise displays the Closed Date.</description>
    <formula>IF(
  ISBLANK(Legacy_Closed_Date__c),
  ClosedDate,
  Legacy_Closed_Date__c
)</formula>
    <inlineHelpText>Displays the Legacy Closed Date if populated, otherwise displays the Closed Date.</inlineHelpText>
    <label>Closed Date (Reporting)</label>
    <type>DateTime</type>
</CustomField>