Perkin-UAT/force-app/main/default/objects/Case/fields/BD_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>BD_Contact_Email__c</fullName>
    <formula>Contact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BD Contact Email</label>
    <type>Text</type>
</CustomField>