Perkin-UAT/force-app/main/default/objects/Case/fields/BD_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>BD_Contact_First_Name__c</fullName>
    <label>Contact First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>