Perkin-UAT/force-app/main/default/objects/Case/fields/BD_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>BD_Contact_Last_Name__c</fullName>
    <label>Contact Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>