Perkin-UAT/force-app/main/default/objects/Case/fields/BD_Create_New_Contact__c.field-meta.xml
<CustomField>
    <fullName>BD_Create_New_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will indicate if a new Contact is being created from Case. A trigger on the Contact object will then update SAP which will return a Contact SAP Id.</description>
    <label>Create/Edit Contact</label>
    <type>Checkbox</type>
</CustomField>