Perkin-UAT/force-app/main/default/objects/Case/fields/BD_New_Contact_Business_Phone__c.field-meta.xml
<CustomField>
    <fullName>BD_New_Contact_Business_Phone__c</fullName>
    <label>Business Phone</label>
    <type>Phone</type>
</CustomField>