Perkin-UAT/force-app/main/default/objects/Case/fields/BD_New_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>BD_New_Contact_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>