Perkin-UAT/force-app/main/default/objects/Case/fields/BD_Short_Subject__c.field-meta.xml
<CustomField>
    <fullName>BD_Short_Subject__c</fullName>
    <description>First 40 Characters of the Subject without the [External] prepended</description>
    <formula>LEFT(SUBSTITUTE(Subject, &#39;[External] &#39;, &#39;&#39;), 40)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Short Subject</label>
    <type>Text</type>
</CustomField>