Perkin-UAT/force-app/main/default/objects/Case/fields/BD_Warning__c.field-meta.xml
<CustomField>
    <fullName>BD_Warning__c</fullName>
    <label>Ref. Txn Warning</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>