Perkin-UAT/force-app/main/default/objects/Case/fields/CALP_Case__c.field-meta.xml
<CustomField>
    <fullName>CALP_Case__c</fullName>
    <inlineHelpText>Case number in Caliper SF system</inlineHelpText>
    <label>CALP Case #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>