Perkin-UAT/force-app/main/default/objects/Case/fields/CALP_Model__c.field-meta.xml
<CustomField>
    <fullName>CALP_Model__c</fullName>
    <description>historic CALP base unit</description>
    <label>CALP Model</label>
    <length>30</length>
    <type>Text</type>
</CustomField>