Perkin-UAT/force-app/main/default/objects/Case/fields/CALP_Q_Case__c.field-meta.xml
<CustomField>
    <fullName>CALP_Q_Case__c</fullName>
    <description>legacy data - reference  CALP quality case</description>
    <label>CALP Q-Case #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>