Perkin-UAT/force-app/main/default/objects/Case/fields/CAPA_Assigned_to__c.field-meta.xml
<CustomField>
    <fullName>CAPA_Assigned_to__c</fullName>
    <inlineHelpText>Please fill in name.</inlineHelpText>
    <label>CAPA Assigned to:</label>
    <length>30</length>
    <type>Text</type>
</CustomField>