Perkin-UAT/force-app/main/default/objects/Case/fields/CAPA_Corrective_Action__c.field-meta.xml
<CustomField>
    <fullName>CAPA_Corrective_Action__c</fullName>
    <label>CAPA-Corrective Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>