Perkin-UAT/force-app/main/default/objects/Case/fields/CAPA_Details__c.field-meta.xml
<CustomField>
    <fullName>CAPA_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check box = Enter CAPA</inlineHelpText>
    <label>CAPA Details</label>
    <type>Checkbox</type>
</CustomField>