Perkin-UAT/force-app/main/default/objects/Case/fields/Case_Age_Hours_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Case_Age_Hours_Minutes__c</fullName>
    <formula>TEXT(FLOOR((NOW() - CreatedDate) *24)) &amp;&quot; Hours &quot;&amp; TEXT( ROUND(MOD((NOW()-CreatedDate)*1440,60),0) )&amp;&quot; Minutes &quot;</formula>
    <label>Case Age (Hours &amp; Minutes)</label>
    <type>Text</type>
</CustomField>