Perkin-UAT/force-app/main/default/objects/Case/fields/Case_Aging__c.field-meta.xml
<CustomField>
    <fullName>Case_Aging__c</fullName>
    <formula>IF(IsClosed,
    IF(OR(RecordTypeId=&#39;0123A000001GhBb&#39;,RecordTypeId=&#39;0123A000001GhBc&#39;),
(5 * ( FLOOR( ( DX_Date_Closed__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DX_Date_Closed__c - DATE( 1900, 1, 8), 7 ) ) )

-

(5 * ( FLOOR( ( DX_Date_Received__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DX_Date_Received__c - DATE( 1900, 1, 8), 7 ) )) ,
(5 * ( FLOOR( ( DATEVALUE(ClosedDate) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE(ClosedDate) - DATE( 1900, 1, 8), 7 ) ) )

-

(5 * ( FLOOR( ( DATEVALUE(CreatedDate) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE(CreatedDate) - DATE( 1900, 1, 8), 7 ) ) )
),
5 * ( FLOOR( ( TODAY() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( TODAY()- DATE( 1900, 1, 8), 7 ) )

-

(5 * ( FLOOR( ( DATEVALUE(CreatedDate)- DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE(CreatedDate)- DATE( 1900, 1, 8), 7 ) ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>