Perkin-UAT/force-app/main/default/objects/Case/fields/Case_Aging_open__c.field-meta.xml
<CustomField>
    <fullName>Case_Aging_open__c</fullName>
    <formula>IF( IsClosed,null,NOW()-CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Aging (open)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>