Perkin-UAT/force-app/main/default/objects/Case/fields/Case_Assignment_Run__c.field-meta.xml
<CustomField>
    <fullName>Case_Assignment_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field created to stop case re-assignment.</description>
    <label>Case Assignment Run</label>
    <type>Checkbox</type>
</CustomField>