Perkin-UAT/force-app/main/default/objects/Case/fields/Case_Description__c.field-meta.xml
<CustomField>
    <fullName>Case_Description__c</fullName>
    <label>Case Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>