Perkin-UAT/force-app/main/default/objects/Case/fields/Case_Flag__c.field-meta.xml
<CustomField>
    <fullName>Case_Flag__c</fullName>
    <formula>IF( Case_Aging_open__c  &gt; 10, IMAGE(&quot;/img/samples/color_red.gif&quot;,&quot;red&quot;, 30,30),
IF( Case_Aging_open__c  &gt; 5, IMAGE(&quot;/img/samples/color_yellow.gif&quot;,&quot;yellow&quot;, 30,30),
IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 30, 30)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Flag</label>
    <type>Text</type>
</CustomField>