Perkin-UAT/force-app/main/default/objects/Case/fields/Case_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Case_Resolution__c</fullName>
    <description>LST Service cases</description>
    <label>Case Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Adjustment – Elect/Mech</fullName>
            </value>
            <value>
                <fullName>Admin (Non-Billable)</fullName>
            </value>
            <value>
                <fullName>Calibration</fullName>
            </value>
            <value>
                <fullName>Clean</fullName>
            </value>
            <value>
                <fullName>Created Quality Case</fullName>
            </value>
            <value>
                <fullName>Installation Complete</fullName>
            </value>
            <value>
                <fullName>Method Development</fullName>
            </value>
            <value>
                <fullName>Move Complete</fullName>
            </value>
            <value>
                <fullName>Order Part</fullName>
            </value>
            <value>
                <fullName>Phone Fix</fullName>
            </value>
            <value>
                <fullName>PM Complete</fullName>
            </value>
            <value>
                <fullName>Reconfigure Software</fullName>
            </value>
            <value>
                <fullName>Repaired Part</fullName>
            </value>
            <value>
                <fullName>Replaced Part</fullName>
            </value>
            <value>
                <fullName>Re-teach</fullName>
            </value>
            <value>
                <fullName>Train Operator/Customer</fullName>
            </value>
            <value>
                <fullName>Update/Upgrade Complete</fullName>
            </value>
            <value>
                <fullName>Duplicate Case-N/A</fullName>
            </value>
            <value>
                <fullName>Training Complete</fullName>
            </value>
            <value>
                <fullName>RevRec - Additional training pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>