Perkin-UAT/force-app/main/default/objects/Case/fields/Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Status__c</fullName>
    <description>Picklist for the Case status for Bio-discovery cases</description>
    <label>Case Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Auto Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>