Perkin-UAT/force-app/main/default/objects/Case/fields/Case_Team__c.field-meta.xml
<CustomField>
    <fullName>Case_Team__c</fullName>
    <label>Case Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Care</fullName>
                <default>true</default>
                <label>Customer Care</label>
            </value>
            <value>
                <fullName>Tech Support</fullName>
            </value>
            <value>
                <fullName>Finance / Credit Collection</fullName>
            </value>
            <value>
                <fullName>E-Invoicing</fullName>
            </value>
            <value>
                <fullName>E-commerce</fullName>
            </value>
            <value>
                <fullName>Customer Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>