Perkin-UAT/force-app/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>To store the Category of Website form  (Source: INC0406105)</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Biodiscovery Reagents and Assays (Alpha, HTRF, LANCE, Lites, DELFIA)</fullName>
            </value>
            <value>
                <fullName>Bioprocess QC (ssDNA, FFA, HostDetectTM)</fullName>
            </value>
            <value>
                <fullName>Cell Counting and Image Cytometry (Nexcelom)</fullName>
            </value>
            <value>
                <fullName>Cell Lines and Membranes</fullName>
            </value>
            <value>
                <fullName>Cellular Imaging and Analysis - Reagents</fullName>
            </value>
            <value>
                <fullName>Genetic Screening</fullName>
                <isActive>false</isActive>
                <label>Genetic Screening</label>
            </value>
            <value>
                <fullName>High Content Screening Systems</fullName>
            </value>
            <value>
                <fullName>In Vivo Imaging - Instruments</fullName>
            </value>
            <value>
                <fullName>In Vivo Imaging - Reagents</fullName>
            </value>
            <value>
                <fullName>LabChip (Microfluidics)</fullName>
            </value>
            <value>
                <fullName>Microplates – Consumables</fullName>
            </value>
            <value>
                <fullName>Molecular Diagnostics (COVID-19, CMV, C. auris)</fullName>
            </value>
            <value>
                <fullName>Next Gen Sequencing</fullName>
            </value>
            <value>
                <fullName>Nucleic Acid Purification</fullName>
            </value>
            <value>
                <fullName>Omni Homogenizers and Accessories</fullName>
            </value>
            <value>
                <fullName>Omni Sonicators</fullName>
            </value>
            <value>
                <fullName>Oxford Immunotec</fullName>
            </value>
            <value>
                <fullName>Radiochemicals, Scintillation Cocktails and Consumables</fullName>
            </value>
            <value>
                <fullName>Radiochemicals - Reagents and Consumables</fullName>
                <isActive>false</isActive>
                <label>Radiochemicals - Reagents and Consumables</label>
            </value>
            <value>
                <fullName>Reproductive Health</fullName>
            </value>
            <value>
                <fullName>Research Reagents</fullName>
            </value>
            <value>
                <fullName>Revvity Centrifuges</fullName>
            </value>
            <value>
                <fullName>Scintillation Counting – Reagents</fullName>
            </value>
            <value>
                <fullName>Single Cell Genomics</fullName>
                <isActive>false</isActive>
                <label>Single Cell Genomics</label>
            </value>
            <value>
                <fullName>Vanadis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>