Perkin-UAT/force-app/main/default/objects/Case/fields/Cloning_From__c.field-meta.xml
<CustomField>
    <fullName>Cloning_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>for entering a Case value when Cloning existent case and its Child objects</description>
    <label>Cloned From</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases (Cloning From)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>