Perkin-UAT/force-app/main/default/objects/Case/fields/Comment_Updated_Time__c.field-meta.xml
<CustomField>
    <fullName>Comment_Updated_Time__c</fullName>
    <label>Comment Updated Time</label>
    <type>DateTime</type>
</CustomField>