Perkin-UAT/force-app/main/default/objects/Case/fields/Company_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Postal_Code__c</fullName>
    <label>Company Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>