Perkin-UAT/force-app/main/default/objects/Case/fields/Complaint_Question2__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Question2__c</fullName>
    <description>Is it related to a possible failure of service, such as distribution: installation expected or contracted activities; order management affecting products or delivery; etc. (excluding invoicing errors)?</description>
    <inlineHelpText>Is it related to a possible failure of service, such as distribution: installation expected or contracted activities; order management affecting products or delivery; etc. (excluding invoicing errors)?</inlineHelpText>
    <label>Related to Failure of Service?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>