Perkin-UAT/force-app/main/default/objects/Case/fields/Complaint_Question5__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Question5__c</fullName>
    <description>Has there been an erroneous reading or unexpected result from a patient test?</description>
    <inlineHelpText>Has there been an erroneous reading or unexpected result from a patient test?</inlineHelpText>
    <label>Has there been an erroneous reading?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>