Perkin-UAT/force-app/main/default/objects/Case/fields/Completeness__c.field-meta.xml
<CustomField>
    <fullName>Completeness__c</fullName>
    <description>LST Service process for closing installation cases</description>
    <label>Completeness</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Functional__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>No Process Exists</fullName>
            </value>
            <value>
                <fullName>Mfg Procedures</fullName>
            </value>
            <value>
                <fullName>Existing Process Needs Improvement</fullName>
            </value>
            <value>
                <fullName>Site Prep Process</fullName>
            </value>
            <value>
                <fullName>PDP Process</fullName>
            </value>
            <value>
                <fullName>Software Issue</fullName>
            </value>
            <value>
                <fullName>Service/Support Issue</fullName>
            </value>
            <value>
                <fullName>Shipping Problem</fullName>
            </value>
            <value>
                <fullName>Marketing/Sales</fullName>
            </value>
            <value>
                <fullName>Misc Hardware</fullName>
            </value>
            <value>
                <fullName>100% - No components missing</fullName>
            </value>
            <value>
                <fullName>50% - 1 or 2 components missing</fullName>
            </value>
            <value>
                <fullName>0% - 2+ components missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>