Perkin-UAT/force-app/main/default/objects/Case/fields/Computer_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Computer_Configuration__c</fullName>
    <label>Computer Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Host PC</fullName>
            </value>
            <value>
                <fullName>Investigator PC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>