Perkin-UAT/force-app/main/default/objects/Case/fields/Concerns_injury_death_due_to_malfuntion__c.field-meta.xml
<CustomField>
    <fullName>Concerns_injury_death_due_to_malfuntion__c</fullName>
    <inlineHelpText>Does this concern an injury and/or death due to device malfunction?</inlineHelpText>
    <label>Concerns injury/death due to malfuntion?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>