Perkin-UAT/force-app/main/default/objects/Case/fields/Confirm__c.field-meta.xml
<CustomField>
    <fullName>Confirm__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to indicate that the Case Owner confirms that the value in the Type of Case field is correct, before closing a Case.</description>
    <inlineHelpText>Used to indicate that the Case Owner confirms that the value in the Type of Case field is correct, before closing a Case.</inlineHelpText>
    <label>Confirm</label>
    <type>Checkbox</type>
</CustomField>