Perkin-UAT/force-app/main/default/objects/Case/fields/Confirmed_Training_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Training_Date__c</fullName>
    <label>Confirmed Training Date</label>
    <type>Date</type>
</CustomField>