Perkin-UAT/force-app/main/default/objects/Case/fields/Contact_Country__c.field-meta.xml
<CustomField>
    <fullName>Contact_Country__c</fullName>
    <description>Requested by Rich Talbot - Pulling in from the Contact object- the value of the Mailing Country- used to determine where the Case contact is located and to assign someone in that area.</description>
    <formula>Contact.MailingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Country</label>
    <type>Text</type>
</CustomField>