Perkin-UAT/force-app/main/default/objects/Case/fields/ContractEndDate__c.field-meta.xml
<CustomField>
    <fullName>ContractEndDate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract*</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>EndDate</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>